Bug fix where footer is one pixel too tall (causing a vertical scroll bar when none is needed) and vertically centering logo and copyright
Cleanup of error pages

Bug fix where multiple outage annoucements weren't properly spaced on the login page

--- a/console/app/assets/stylesheets/account.css.scss
+++ b/console/app/assets/stylesheets/account.css.scss
@@ -41,6 +41,9 @@ body.simple {
       background-color: #aaa;
       padding: 25px 35px;
       color: #303030;
+      .announcement + .announcement {
+        margin-top: 15px;
+      }
       &.outage {
         background-color: #FFD24E;
       }
@@ -50,9 +53,6 @@ body.simple {
         &:hover {
           border-bottom: 1px solid;
         }
-      }
-      .timestamp {
-        font-size: $smallFontSize;
       }
     }
     &.primary {
